2011-08-10  Werner Koch  <wk@g10code.com>

	* configure.ac: Use http://bugs.gnupg.org as bug reporting
	address.  Fix new autoconf warnings.

	Update libtool to version 2.4.

	* config.guess, config.sub: Update to version 2011-06-03.

2011-06-16  Marcus Brinkmann  <marcus@g10code.com>

	Release 2.0.2

	* configure.ac: Set LT version to C2/A2/R0.

2011-04-20  Werner Koch  <wk@g10code.com>

	* Makefile.am (EXTRA_DIST): s/README.SVN/README.GIT/

2011-04-06  Werner Koch  <wk@g10code.com>

	* autogen.sh: Check the git setup.  Add option --build-w64.
	* configure.ac (HAVE_W64_SYSTEM): Define.
	(LIBGCRYPT_CONFIG_HOST): New.

	* m4/gpg-error.m4: Update from current libgpg-error repo.

2011-03-28  Werner Koch  <wk@g10code.com>

	* configure.ac (AC_CHECK_HEADERS): Check for sys/select.h which is
	needed by one test utility.

2010-12-23  Werner Koch  <wk@g10code.com>

	* configure.ac: Add a git commit identifier to the version.

2010-11-01  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for fcntl.h.

2010-11-01  Werner Koch  <wk@g10code.com>

	* configure.ac: Check for sys/types.h, sys/stat.h, sys/time and
	unistd.h

2010-08-19  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_TOP, AH_BOTTOM): New.  Define
	GPG_ERR_ENABLE_ERRNO_MACROS.

2010-08-09  Werner Koch  <wk@g10code.com>

	Release 2.0.1

	* configure.ac: Set LT version to C1/A1/R0.

2010-04-20  Werner Koch  <wk@g10code.com>

	* configure.ac: Change wording of the no-funopen warning.

2010-03-22  Werner Koch  <wk@g10code.com>

	* configure.ac (CC_FOR_BUILD): Add test.

2010-03-17  Werner Koch  <wk@g10code.com>

	* tests/ChangeLog: New.  Move all relevant entries to there.

2010-02-25  Werner Koch  <wk@g10code.com>

	* m4/libtool.m4 (_LT_CHECK_MAGIC_METHOD): Fix for non x86 mingw
	targets.

2010-02-11  Werner Koch  <wk@g10code.com>

	* configure.ac (inet_pton): Check for it.

2010-02-04  Werner Koch  <wk@g10code.com>

	* configure.ac (AC_TYPE_UINT16_T): New.

2010-01-26  Werner Koch  <wk@g10code.com>
